[add] feature section structure

--- a/index.html
+++ b/index.html
@@ -17,14 +17,65 @@
                 <img id="logo" src="./assets/img/logo.png" alt="">
             </a>
             
-            <a href="#">
+            <a href="#" class="d_none">
                 <i class="fa-solid fa-2x fa-bars"></i>
             </a>
             
+            <div class="link_container d_none_lg">
+                <a href="#" class="d_none_lg">
+                    <span class="link">
+                        Planning
+                    </span>
+                </a>
+                <a href="#" class="d_none_lg">
+                    <span class="link">
+                        Testimonial
+                    </span>
+                </a>
+                <a href="#" class="d_none_lg">
+                    <span class="link">
+                        Features
+                    </span>
+                </a>
+                <a href="#" class="d_none_lg">
+                    <span class="link">
+                        About us
+                    </span>
+                </a>
+                <a href="#" class="d_none_lg">
+                    <span class="link btn">
+                        Get started
+                    </span>
+                </a>
+            </div>
         </div>
     </header>
     <!-- /.app_header -->
-    <main class="app_main"></main>
+    <main class="app_main flexbox">
+        <div class="container">   
+            <section class="feature">
+                <div class="row">
+                    <div class="col_12 col_md_6">
+
+                    </div>
+                    <div class="col_12 col_md_3">
+                    </div>
+                </div>                
+                <div class="row">        
+
+                    <div class="col_12 col_md_3">
+
+                    </div>
+                    <div class="col_12 col_md_3">
+
+                    </div>
+                    <div class="col_12 col_md_3">
+
+                    </div>
+                </div>
+            </section>
+        </div> 
+    </main>
     <!-- /.app_main -->
     <footer class="app_footer"></footer>
     <!-- /.app_footer -->
