[add] about us section structure

--- a/index.html
+++ b/index.html
@@ -138,7 +138,18 @@
                                 <!-- /BENEFITS -->
 
                                 <!-- ABOUT US -->
+            <section class="about us">
+                <div class="container">
+                    <div class="row row_lg">
+                        <div class="col_12 col_md_6">
 
+                        </div>
+                        <div class="col_12 col_md_6">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
 
 
                                 <!-- /ABOUT US -->
