[add] call to action section structure

--- a/index.html
+++ b/index.html
@@ -151,12 +151,26 @@
                 </div>
             </section>
 
-
                                 <!-- /ABOUT US -->
-              
+
+                                <!-- CALL TO ACTION -->
+
+            <section class="call_to_action call_bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col_12">
+
+                        </div>
+                    </div>
+                </div>
+            </section>                    
+
+                                <!-- /CALL TO ACTION -->
     </main>
     <!-- /.app_main -->
-    <footer class="app_footer"></footer>
+    <footer class="app_footer">
+        
+    </footer>
     <!-- /.app_footer -->
 </body>
 </html>
