[add] footer section structure

--- a/index.html
+++ b/index.html
@@ -168,8 +168,14 @@
                                 <!-- /CALL TO ACTION -->
     </main>
     <!-- /.app_main -->
-    <footer class="app_footer">
-        
+    <footer class="app_footer footer_bg">
+        <div class="container">
+            <div class="row">
+                <div class="col_12">
+
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- /.app_footer -->
 </body>
