[add] feature style and planning first col style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>demo responsive</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -57,23 +60,75 @@
             <section class="feature">
                 <div class="container">
                     <div class="row">
-                        <div class="col_12 col_md_6 col_feature_bg">
-
+                        <div class="col_12 col_md_6 col_feature_bg card_radius">
+                            <div class="card flexbox">
+                                <div class="text_container text_container_lg flexbox" id="lg_txt">
+                                    <h3 class="blue_head">
+                                        Get a demo application
+                                    </h3>
+                                    <p class="feature_p">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit dignissimos doloremque eaque in debitis, quas repellat tempora maxime error incidunt vero aliquid suscipit.
+                                    </p>
+                                    <a href="#">
+                                        <span class="btn blue">
+                                            <i class="fa-brands fa-apple"></i>
+                                            App Store
+                                        </span>
+                                    </a>
+                                </div>
+                                <img id="phone" src="./assets/img/phone.png" alt="smartphone">
+                            </div>    
                         </div>
-                        <div class="col_12 col_md_3 col_feature_bg">
+                        <div class="col_12 col_md_3 col_feature_bg card_radius">
+                            <div class="text_container flexbox">  
+                                <i class="fa-solid fa-4x fa-file-code feature_icon"></i>
+                                <h3 class="blue_head">
+                                    Clean Code
+                                </h3>
+                                <p class="feature_p p_marg">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
+                                </p>
+                            </div>     
                         </div>
                     </div>                
                     <div class="row">        
 
-                        <div class="col_12 col_md_3 col_feature_bg">
-
+                        <div class="col_12 col_md_3 col_feature_bg card_radius">
+                            <div class="text_container flexbox">  
+                                <i class="fa-solid fa-compass-drafting fa-4x feature_icon"></i>
+                                <h3 class="blue_head">
+                                     Web Design
+                                </h3>
+                                <p class="feature_p p_marg">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
+                                </p>
+                            </div>     
                         </div>
-                        <div class="col_12 col_md_3 col_feature_bg">
 
+                        <div class="col_12 col_md_3 col_feature_bg card_radius">
+                            <div class="text_container flexbox">  
+                                <i class="fa-solid fa-laptop-code fa-4x feature_icon"></i>
+                                <h3 class="blue_head">
+                                    Development
+                                </h3>
+                                <p class="feature_p p_marg">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
+                                </p>
+                            </div>     
                         </div>
-                        <div class="col_12 col_md_3 col_feature_bg">
 
+                        <div class="col_12 col_md_3 col_feature_bg card_radius">
+                            <div class="text_container flexbox">  
+                                <i class="fa-solid fa-bullhorn fa-4x feature_icon"></i>
+                                <h3 class="blue_head">
+                                    Branding
+                                </h3>
+                                <p class="feature_p p_marg">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
+                                </p>
+                            </div>     
                         </div>
+
                     </div>
                 </div>
             </section>
@@ -85,7 +140,17 @@
                 <div class="container">                    
                     <div class="row row_lg">
                         <div class="col_12 col_lg_6">
-                        
+                            <div class="card flexbox">
+                                <img src="./assets/img/planning1.png" alt="sample image">
+                                <div class="text_container white flexbox">
+                                    <h2 class="head_white">
+                                            Strategic Planning
+                                    </h2>
+                                    <p class="custom_p">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, sint beatae. Eligendi totam dignissimos expedita quisquam accusamus animi nam reprehenderit.
+                                    </p>
+                                </div>
+                            </div>    
                         </div>
                         <div class="col_12 col_lg_6">
 
