[add] custom section style

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="container">                    
                     <div class="row row_lg">
                         <div class="col_12 col_lg_6">
-                            <div class="card flexbox">
+                            <div class="card flexbox" id="custom_card">
                                 <img src="./assets/img/planning1.png" alt="sample image">
                                 <div class="text_container white flexbox">
                                     <h2 class="head_white">
@@ -152,8 +152,20 @@
                                 </div>
                             </div>    
                         </div>
-                        <div class="col_12 col_lg_6">
-
+                        <div class="col_12 col_lg_6 col_custom_bg" id="small">
+                            <div class="card flexbox" id="custom_card_down">
+                                <img src="./assets/img/planning2.png" alt="sample image">
+                                <div class="text_container black flexbox">
+                                    <h2 class="head_white">
+                                             App Development
+                                    </h2>
+                                    <p class="custom_p">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, sint beatae. Eligendi totam dignissimos expedita quisquam accusamus animi nam reprehenderit.
+                                    </p>
+                                    <span id="arrow">
+                                        <i class="fa-solid fa-arrow-down"></i>
+                                    </span>
+                                </div>
                         </div>
                     </div>
                 </div>
