[add] benfits complete style [add] about us style [add] call to action style [add] footer style

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </span>
                 </a>
                 <a href="#" class="d_none_lg">
-                    <span class="link btn btn_head">
+                    <span class="link btn btn_heads">
                         Get started
                     </span>
                 </a>
@@ -201,7 +201,7 @@
    
                                 <p class="white">
                                     <i class="fa-solid fa-quote-left"></i>
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos quis officia reprehenderit similique odit deserunt!
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos quis officia reprehenderit similique odit deserunt! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     <i class="fa-solid fa-quote-right"></i> 
                                 </p>
                                     <h6 class="small_head partner_h">
@@ -222,6 +222,7 @@
                                 <p class="white">
                                     <i class="fa-solid fa-quote-left"></i>
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos quis officia reprehenderit similique odit deserunt!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     <i class="fa-solid fa-quote-right"></i> 
                                 </p>
                                 <h6 class="small_head partner_h">
@@ -260,15 +261,20 @@
             <section class="benefits benefits_bg">
                 <div class="container">
                     <div class="row">
+                        <h2 class="white_head">
+                            Benefits of working with Us    
+                        </h2>
+                    </div>
+                    <div class="row">
                         <div class="col_12 col_lg_3 col_md_3_bfts">
-                            <div class="text_container card_bg_benefits flexbox">  
+                            <div class="text_container card_bg_benefits flexbox just_left">  
                                 <h2 class="head_purple">
                                     01
                                 </h2>
-                                <h3 class="head_purple">
-                                    Clean Code
+                                <h3 class="head_purple small_h">
+                                    High Quality
                                 </h3>
-                                <p class="feature_p p_marg">
+                                <p class="feature_p p_marg left_text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
                                 </p>
                                 <a href="#" class="btn btn_purple">
@@ -278,14 +284,14 @@
                         </div> 
                         
                         <div class="col_12 col_lg_3 col_md_3_bfts">
-                            <div class="text_container card_bg_benefits flexbox">  
+                            <div class="text_container card_bg_benefits flexbox just_left">  
                                 <h2 class="head_purple">
-                                    01
+                                    02
                                 </h2>
-                                <h3 class="head_purple">
-                                    Clean Code
+                                <h3 class="head_purple small_h">
+                                    Creative Item
                                 </h3>
-                                <p class="feature_p p_marg">
+                                <p class="feature_p p_marg left_text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
                                 </p>
                                 <a href="#" class="btn btn_purple">
@@ -295,14 +301,14 @@
                         </div>    
 
                         <div class="col_12 col_lg_3 col_md_3_bfts">
-                            <div class="text_container card_bg_benefits flexbox">  
+                            <div class="text_container card_bg_benefits flexbox just_left">  
                                 <h2 class="head_purple">
-                                    01
+                                    03
                                 </h2>
-                                <h3 class="head_purple">
-                                    Clean Code
+                                <h3 class="head_purple small_h">
+                                    Amazing Results
                                 </h3>
-                                <p class="feature_p p_marg">
+                                <p class="feature_p p_marg left_text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
                                 </p>
                                 <a href="#" class="btn btn_purple">
@@ -312,14 +318,14 @@
                         </div>    
 
                         <div class="col_12 col_lg_3 col_md_3_bfts">
-                            <div class="text_container card_bg_benefits flexbox">  
+                            <div class="text_container card_bg_benefits flexbox just_left">  
                                 <h2 class="head_purple">
-                                    01
+                                    04
                                 </h2>
-                                <h3 class="head_purple">
-                                    Clean Code
+                                <h3 class="head_purple small_h">
+                                    Best Pricing
                                 </h3>
-                                <p class="feature_p p_marg">
+                                <p class="feature_p p_marg left_text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
                                 </p>
                                 <a href="#" class="btn btn_purple">
@@ -329,14 +335,14 @@
                         </div>    
 
                         <div class="col_12 col_lg_3 col_md_3_bfts">
-                            <div class="text_container card_bg_benefits flexbox">  
+                            <div class="text_container card_bg_benefits flexbox just_left">  
                                 <h2 class="head_purple">
-                                    01
+                                    05
                                 </h2>
-                                <h3 class="head_purple">
-                                    Clean Code
+                                <h3 class="head_purple small_h">
+                                    Innovations
                                 </h3>
-                                <p class="feature_p p_marg">
+                                <p class="feature_p p_marg left_text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
                                 </p>
                                 <a href="#" class="btn btn_purple">
@@ -346,14 +352,14 @@
                         </div>    
 
                         <div class="col_12 col_lg_3 col_md_3_bfts">
-                            <div class="text_container card_bg_benefits flexbox">  
+                            <div class="text_container card_bg_benefits flexbox just_left">  
                                 <h2 class="head_purple">
-                                    01
+                                    06
                                 </h2>
-                                <h3 class="head_purple">
-                                    Clean Code
+                                <h3 class="head_purple small_h">
+                                    24/7 Support
                                 </h3>
-                                <p class="feature_p p_marg">
+                                <p class="feature_p p_marg left_text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error praesentium consequuntur a. Incidunt, doloremque! Accusantium sunt dolorum rem placeat?
                                 </p>
                                 <a href="#" class="btn btn_purple">
@@ -370,12 +376,30 @@
                                 <!-- ABOUT US -->
             <section class="about us">
                 <div class="container">
-                    <div class="row row_lg">
-                        <div class="col_12 col_md_6">
-
+                    <div class="row row_md row_lg">
+                        <div class="col_12 col_md_6 about_flex about_w_md">
+                            <h2 class="head_purple left_head">
+                                About Us
+                            </h2>
+                            <p class="about_p">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil id et facere tempore amet ex aperiam earum dolorem adipisci. Ipsum accusantium aut ad fugiat voluptates nam omnis alias quas perspiciatis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex libero eaque, delectus explicabo qui necessitatibus sapiente asperiores vitae corrupti aliquam incidunt laborum animi? Pariatur deleniti dolores inventore eum, a quibusdam.   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil id et facere tempore amet ex aperiam earum dolorem adipisci. Ipsum accusantium aut ad fugiat voluptates nam omnis alias quas perspiciatis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex libero eaque, delectus explicabo qui necessitatibus sapiente asperiores vitae corrupti aliquam incidunt laborum animi? Pariatur deleniti dolores inventore eum, a quibusdam.
+                            </p>
+                            <p class="about_p">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, doloremque sit rem quae reprehenderit molestiae deserunt a dolorum accusamus reiciendis vero consequuntur, vitae ipsum nesciunt sed, dignissimos atque beatae corporis temporibus est corrupti? Eveniet molestiae modi quo iusto, neque distinctio natus sequi velit consequuntur. Beatae mollitia nesciunt accusantium autem doloribus?
+                            </p>
                         </div>
-                        <div class="col_12 col_md_6">
-
+                        <div class="col_12 col_md_6 about_flex">
+                            <div class="partner_img_container third_partner flexbox">
+                                <i id="quote" class="fa-solid fa-2x fa-quote-right"></i> 
+                            </div>
+                            <p class="about_p purple_p">
+                                Ve porto io a magn&aacute; a pajata, a pizza scrocchiarella, e rigaglie de pollo, ormai nun le fa pi&uacute; nessuno! Artro che food porn, foodpornari, burrate e pistacchi.
+                            </p>
+                            <a href="#" class="btn btn_purple">
+                                <i class="fa-brands fa-linkedin"></i>
+                                Find me on Linkedin
+                            </a>
+                          
                         </div>
                     </div>
                 </div>
@@ -386,9 +410,31 @@
                                 <!-- CALL TO ACTION -->
 
             <section class="call_to_action call_bg">
-                <div class="container">
+                <div class="container"> 
                     <div class="row">
-                        <div class="col_12">
+                        <div class="col_12 flexbox call">
+                            <h6 class="small_head small_h_white">
+                                GET STARTED
+                            </h6>
+                            <h2 class="white_head">
+                                Simple, Transparent Pricings
+                            </h2>
+                            <h2 class="orange_head">
+                                It's Free!
+                            </h2>
+                            <p class="about_p white_p">
+                                We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.
+                            </p>
+                            <a href="#" class="btn btn_white_purple">
+                                Get Started
+                            </a>
+
+                            <p class="about_p white_p">
+                                Copyright 2021 Boolean   Classe XX 
+                                <a href="#" id="classic_link">
+                                    Privacy Policy
+                                </a>
+                            </p>
 
                         </div>
                     </div>
@@ -401,8 +447,14 @@
     <footer class="app_footer footer_bg">
         <div class="container">
             <div class="row">
-                <div class="col_12">
-
+                <div class="col_12 footer_col">
+                    <p class="footer_p">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate odio labore officiis provident tenetur repudiandae voluptates veniam doloribus ipsa voluptatem dolores ipsum nihil, tempore quos magni obcaecati cupiditate porro. Sunt!
+                    </p>
+                    <p class="footer_p">
+                        <a href="#">lorem ipsum</a>a
+                        Lorem, ipsum dolor.
+                    </p>
                 </div>
             </div>
         </div>
